# pj-player

./: --Frag23  --Frag3  --Frag4  --Frag47  .gitignore  Cargo.toml  README.md  bundle.sh  bundle.toml  pjplayer
src/: app.rs  download.rs  main.rs  search.rs  stream.rs  ui.rs
