[package]
name = "pjplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
dotenv = "0.15"                        # Rust bindings for yt-dlp (or call directly)
async-trait = "0.1.83"
