[package]
name = "pjplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
dotenv = "0.15"                        # Rust bindings for yt-dlp (or call directly)
async-trait = "0.1.83"
libc = "0.2"
rand = "0.8.5"
