[package]
name = "pjplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.11", features = ["json","blocking"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
rand = "0.9.1"

[profile.release]
lto = true
codegen-units = 1
